refactor(core): use getFirst() instead of get(0) in tests (JDK 21 Sequenced Collections)